awesomniumc/include/awesomiumc.h


#define AWE_LEFT_BUTTON 1
#define AWE_RIGHT_BUTTON 2
#define AWE_MIDDLE_BUTTON 3

#define AWE_TYPE_KEY_DOWN 1
#define AWE_TYPE_KEY_UP 2
#define AWE_TYPE_CHAR 3

#define AWE_MOD_SHIFT_KEY (1 << 0)
#define AWE_MOD_CONTROL_KEY (1 << 1)
#define AWE_MOD_ALT_KEY (1 << 2)
#define AWE_MOD_META_KEY (1 << 3)
#define AWE_MOD_IS_KEYPAD (1 << 4)
#define AWE_MOD_IS_AUTOREPEAT (1 << 5)

#define AWE_CURSOR_POINTER 0
#define AWE_CURSOR_CROSS 1
#define AWE_CURSOR_HAND 2
#define AWE_CURSOR_IBEAM 3
#define AWE_CURSOR_WAIT 4
#define AWE_CURSOR_HELP 5
#define AWE_CURSOR_EAST_RESIZE 6
#define AWE_CURSOR_NORTH_RESIZE 7
#define AWE_CURSOR_NORTH_EAST_RESIZE 8
#define AWE_CURSOR_NORTH_WEST_RESIZE 9
#define AWE_CURSOR_SOUTH_RESIZE 10
#define AWE_CURSOR_SOUTH_EAST_RESIZE 11
#define AWE_CURSOR_SOUTH_WEST_RESIZE 12 
#define AWE_CURSOR_WEST_RESIZE 13
#define AWE_CURSOR_NORTH_SOUTH_RESIZE 14
#define AWE_CURSOR_EAST_WEST_RESIZE 15
#define AWE_CURSOR_NORTH_EAST_SOUTH_WEST_RESIZE 16
#define AWE_CURSOR_NORTH_WEST_SOUTH_EAST_RESIZE 17
#define AWE_CURSOR_COLUMN_RESIZE 18
#define AWE_CURSOR_ROW_RESIZE 19
#define AWE_CURSOR_MIDDLE_PANNING 20
#define AWE_CURSOR_EAST_PANNING 21
#define AWE_CURSOR_NORTH_PANNING 22
#define AWE_CURSOR_NORTH_EAST_PANNING 23 
#define AWE_CURSOR_NORTH_WEST_PANNING 24
#define AWE_CURSOR_SOUTH_PANNIN 25
#define AWE_CURSOR_SOUTH_EAST_PANNING 26
#define AWE_CURSOR_SOUTH_WEST_PANNING 27
#define AWE_CURSOR_WEST_PANNING 28
#define AWE_CURSOR_MOVE 29
#define AWE_CURSOR_VERTICAL_TEXT 30
#define AWE_CURSOR_CELL 31
#define AWE_CURSOR_CONTEXT_MENU 32
#define AWE_CURSOR_ALIAS 33
#define AWE_CURSOR_PROGRESS 34
#define AWE_CURSOR_NO_DROP 35
#define AWE_CURSOR_COPY 36
#define AWE_CURSOR_NONE 37
#define AWE_CURSOR_NOT_ALLOWED 38
#define AWE_CURSOR_ZOOM_IN 39
#define AWE_CURSOR_ZOOM_OUT 40
#define AWE_CURSOR_CUSTOM 41

#define AWE_UFM_NONE 0
#define AWE_UFM_BLACKLIST 1
#define AWE_UFM_WHITELIST 2

#define AWE_LOG_NONE 0
#define AWE_LOG_NORMAL 1
#define AWE_LOG_VERBOSE 2
//#define HeaderDefinitionC void*

typedef struct {
	int x, y, width, height;
} RectC;


typedef struct {
	void (AWE_CALLBACK *onBeginNavigation) (WebViewC webView, const char* url, const wchar_t* frameName);	
	void (AWE_CALLBACK *onBeginLoading) (WebViewC webView, const char* url, const wchar_t* frameName, int statusCode, const wchar_t* mimeType);
	void (AWE_CALLBACK *onFinishLoading) (WebViewC webView);
	void (AWE_CALLBACK *onCallback) (WebViewC webView, const wchar_t* objectName, const wchar_t* callbackName, const JSArgumentsC args);
	void (AWE_CALLBACK *onReceiveTitle) (WebViewC webView, const wchar_t* title, const wchar_t* frameName);
	void (AWE_CALLBACK *onChangeTooltip) (WebViewC webView, const wchar_t* toolTip);
	void (AWE_CALLBACK *onChangeCursor) (WebViewC webView, int cursor);
	void (AWE_CALLBACK *onChangeKeyboardFocus) (WebViewC webView, int isFocused);
	void (AWE_CALLBACK *onChangeTargetURL) (WebViewC webView, const char* url);
	void (AWE_CALLBACK *onOpenExternalLink) (WebViewC webView, const char* url, const wchar_t* source);
	void (AWE_CALLBACK *onRequestDownload) (WebViewC webView, const char* url);
	void (AWE_CALLBACK *onWebViewCrashed) (WebViewC webView);
	void (AWE_CALLBACK *onPluginCrashed) (WebViewC webView, const wchar_t* pluginName);
	void (AWE_CALLBACK *onRequestMove) (WebViewC webView, int x, int y);
	void (AWE_CALLBACK *onGetPageContents) (WebViewC webView, const char* url, const wchar_t* contents);
	void (AWE_CALLBACK *onDOMReady) (WebViewC webView);
} WebViewListenerC;


typedef struct {
	int 		type;
	int 		modifiers;
	int 		virtualKeyCode;
	int 		nativeKeyCode;
	char 		keyIdentifier [20];
	wchar_t* 	text [4];
	wchar_t* 	unmodifiedText [4];
	int 		isSystemKey;
} WebKeyboardEventC;
	
	extern EXPORT WebCoreC        awe_WebCore_new();

	extern EXPORT WebCoreC        awe_WebCore_newWithPlugins(const wchar_t* pluginPath);

	extern EXPORT WebCoreC        awe_WebCore_newFromConfig(int enablePlugins, int enableJavascript, const wchar_t* userDataPath, const wchar_t* pluginPath, const wchar_t* logPath, int logLevel, const char* userAgentOverride, const char* proxyServer, const char* proxyConfig, int saveCacheAndCookies, int maxCacheSize, int disableSameOriginPolicy, const char* customCss);

	extern EXPORT void	          awe_WebCore_delete(WebCoreC webCore);
	
	extern EXPORT void            awe_WebCore_setBaseDirectory(WebCoreC webCore, const char* baseDirectory);

	extern EXPORT void            awe_WebCore_setBaseDirectoryW(WebCoreC webCore, const wchar_t* baseDirectory);

	extern EXPORT WebViewC        awe_WebCore_createWebView(WebCoreC webCore, int width, int height);

	extern EXPORT void            awe_WebCore_setCustomResponsePage(WebCoreC webCore, int statusCode, const wchar_t* filePath);

	extern EXPORT void            awe_WebCore_update(WebCoreC webCore);

	extern EXPORT const wchar_t*  awe_WebCore_getBaseDirectory(WebCoreC webCore);

	extern EXPORT int	          awe_WebCore_arePluginsEnabled(WebCoreC webCore);

	extern EXPORT void            awe_WebCore_clearCache(WebCoreC webCore);

	extern EXPORT void            awe_WebCore_clearCookies(WebCoreC webCore);

	extern EXPORT int             awe_WebCore_setCookie(WebCoreC webCore, const char* url, const char* cookieString, int isHTTPOnly, int forceSessionCookie);

	extern EXPORT const char*     awe_WebCore_getCookies(WebCoreC webCore, const char* url, int excludeHTTPOnly);

	extern EXPORT void            awe_WebCore_deleteCookie(WebCoreC webCore, const char* url, const char* cookieName);