freebasic/awesomium.bi

''
'' 	  This file is part of Awesomiumc.
''    Copyright (C) 2010  Mario Zechner
''
''    Awesomiumc is free software: you can redistribute it and/or modify
''    it under the terms of the GNU Affero General Public License as published by
''    the Free Software Foundation, either version 3 of the License, or
''    (at your option) any later version.
''
''    Awesomiumc is distributed in the hope that it will be useful,
''    but WITHOUT ANY WARRANTY; without even the implied warranty of
''    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
''    GNU Affero General Public License for more details.
''
''    You should have received a copy of the GNU Affero General Public License
''    along with this program.  If not, see <http://www.gnu.org/licenses/>.
''
#ifndef __awesomiumc_bi__
#define __awesomiumc_bi__

#include once "windows.bi"

#define AWE_LEFT_BUTTON 1
#define AWE_RIGHT_BUTTON 2
#define AWE_MIDDLE_BUTTON 3
#define AWE_TYPE_KEY_DOWN 1
#define AWE_TYPE_KEY_UP 2
#define AWE_TYPE_CHAR 3
#define AWE_MOD_SHIFT_KEY (1 shl 0)
#define AWE_MOD_CONTROL_KEY (1 shl 1)
#define AWE_MOD_ALT_KEY (1 shl 2)
#define AWE_MOD_META_KEY (1 shl 3)
#define AWE_MOD_IS_KEYPAD (1 shl 4)
#define AWE_MOD_IS_AUTOREPEAT (1 shl 5)
#define AWE_CURSOR_POINTER 0
#define AWE_CURSOR_CROSS 1
#define AWE_CURSOR_HAND 2
#define AWE_CURSOR_IBEAM 3
#define AWE_CURSOR_WAIT 4
#define AWE_CURSOR_HELP 5
#define AWE_CURSOR_EAST_RESIZE 6
#define AWE_CURSOR_NORTH_RESIZE 7
#define AWE_CURSOR_NORTH_EAST_RESIZE 8
#define AWE_CURSOR_NORTH_WEST_RESIZE 9
#define AWE_CURSOR_SOUTH_RESIZE 10
#define AWE_CURSOR_SOUTH_EAST_RESIZE 11
#define AWE_CURSOR_SOUTH_WEST_RESIZE 12
#define AWE_CURSOR_WEST_RESIZE 13
#define AWE_CURSOR_NORTH_SOUTH_RESIZE 14
#define AWE_CURSOR_EAST_WEST_RESIZE 15
#define AWE_CURSOR_NORTH_EAST_SOUTH_WEST_RESIZE 16
#define AWE_CURSOR_NORTH_WEST_SOUTH_EAST_RESIZE 17
#define AWE_CURSOR_COLUMN_RESIZE 18
#define AWE_CURSOR_ROW_RESIZE 19
#define AWE_CURSOR_MIDDLE_PANNING 20
#define AWE_CURSOR_EAST_PANNING 21
#define AWE_CURSOR_NORTH_PANNING 22
#define AWE_CURSOR_NORTH_EAST_PANNING 23
#define AWE_CURSOR_NORTH_WEST_PANNING 24
#define AWE_CURSOR_SOUTH_PANNIN 25
#define AWE_CURSOR_SOUTH_EAST_PANNING 26
#define AWE_CURSOR_SOUTH_WEST_PANNING 27
#define AWE_CURSOR_WEST_PANNING 28
#define AWE_CURSOR_MOVE 29
#define AWE_CURSOR_VERTICAL_TEXT 30
#define AWE_CURSOR_CELL 31
#define AWE_CURSOR_CONTEXT_MENU 32
#define AWE_CURSOR_ALIAS 33
#define AWE_CURSOR_PROGRESS 34
#define AWE_CURSOR_NO_DROP 35
#define AWE_CURSOR_COPY 36
#define AWE_CURSOR_NONE 37
#define AWE_CURSOR_NOT_ALLOWED 38
#define AWE_CURSOR_ZOOM_IN 39
#define AWE_CURSOR_ZOOM_OUT 40
#define AWE_CURSOR_CUSTOM 41
#define AWE_UFM_NONE 0
#define AWE_UFM_BLACKLIST 1
#define AWE_UFM_WHITELIST 2
#define AWE_LOG_NONE 0
#define AWE_LOG_NORMAL 1
#define AWE_LOG_VERBOSE 2

type RectC
	x as integer
	y as integer
	width as integer
	height as integer
end type

type WebViewListenerC	
	onBeginNavigation as sub cdecl(byval webView as any ptr, byval url as zstring ptr, byval frameName as wstring ptr) = 0
	onBeginLoading as sub cdecl(byval webView as any ptr, byval url as zstring ptr, byval frameName as wstring ptr, byval statusCode as integer, byval mimeType as wstring ptr) = 0
	onFinishLoading as sub cdecl(byval webView as any ptr) = 0
	onCallback as sub cdecl(byval webView as any ptr, byval objectName as wstring ptr, byval callbackName as wstring ptr, byval args as any ptr) = 0
	onReceiveTitle as sub cdecl(byval webView as any ptr, byval title as wstring ptr, byval frameName as wstring ptr) = 0
	onChangeCursor as sub cdecl(byval webView as any ptr, byval toolTip as wstring ptr) = 0
	onChangeKeyboardFocus as sub cdecl(byval webView as any ptr, byval isFocused as integer) = 0
	onChangeTargetURL as sub cdecl(byval webView as any ptr, byval url as zstring ptr) = 0
	onOpenExternalLink as sub cdecl(byval webView as any ptr, byval url as zstring ptr, byval source as wstring ptr) = 0
	onRequestDownload as sub cdecl(byval webView as any ptr, byval url as zstring ptr) = 0
	onWebViewCrashed as sub cdecl(byval webView as any ptr) = 0
	onPluginCrashed as sub cdecl(byval webView as any ptr, byval pluginName as wstring ptr) = 0
	onRequestMove as sub cdecl(byval webView as any ptr, byval x as integer, byval y as integer) = 0
	onGetPageContents as sub cdecl(byval webView as any ptr, byval url as zstring ptr, byval contents as wstring ptr) = 0
	onDOMReady as sub cdecl(byval webView as any ptr) = 0
end type

type WebKeyboardEventC field = 1
	type as integer
	modifiers as integer
	virtualKeyCode as integer
	nativeKeyCode as integer
	keyIdentifier as ubyte ptr
	text as ushort ptr
	unmodifiedText as ushort ptr
	isSystemKey as integer
end type

extern "C"
declare function awe_WebCore_new cdecl alias "awe_WebCore_new" () as any ptr
declare function awe_WebCore_newWithPlugins cdecl alias "awe_WebCore_newWithPlugins" (byval pluginPath as wstring ptr) as any ptr
declare function awe_WebCore_newFromConfig cdecl alias "awe_WebCore_newFromConfig" (byval enablePlugins as integer, byval enableJavascript as integer, byval userDataPath as wstring ptr, byval pluginPath as wstring ptr, byval logPath as wstring ptr, byval logLevel as integer, byval userAgentOverride as zstring ptr, byval proxyServer as zstring ptr, byval proxyConfig as zstring ptr, byval saveCacheAndCookies as integer, byval maxCacheSize as integer, byval disableSameOriginPolicy as integer, byval customCss as zstring ptr) as any ptr
declare sub awe_WebCore_delete cdecl alias "awe_WebCore_delete" (byval webCore as any ptr)
declare sub awe_WebCore_setBaseDirectory cdecl alias "awe_WebCore_setBaseDirectory" (byval webCore as any ptr, byval baseDirectory as zstring ptr)
declare sub awe_WebCore_setBaseDirectoryW cdecl alias "awe_WebCore_setBaseDirectoryW" (byval webCore as any ptr, byval baseDirectory as wstring ptr)
declare function awe_WebCore_createWebView cdecl alias "awe_WebCore_createWebView" (byval webCore as any ptr, byval width as integer, byval height as integer) as any ptr
declare sub awe_WebCore_setCustomResponsePage cdecl alias "awe_WebCore_setCustomResponsePage" (byval webCore as any ptr, byval statusCode as integer, byval filePath as wstring ptr)
declare sub awe_WebCore_update cdecl alias "awe_WebCore_update" (byval webCore as any ptr)
declare function awe_WebCore_getBaseDirectory cdecl alias "awe_WebCore_getBaseDirectory" (byval webCore as any ptr) as wstring ptr
declare function awe_WebCore_arePluginsEnabled cdecl alias "awe_WebCore_arePluginsEnabled" (byval webCore as any ptr) as integer
declare sub awe_WebCore_clearCache cdecl alias "awe_WebCore_clearCache" (byval webCore as any ptr)
declare sub awe_WebCore_clearCookies cdecl alias "awe_WebCore_clearCookies" (byval webCore as any ptr)
declare function awe_WebCore_setCookie cdecl alias "awe_WebCore_setCookie" (byval webCore as any ptr, byval url as zstring ptr, byval cookieString as zstring ptr, byval isHTTPOnly as integer, byval forceSessionCookie as integer) as integer
declare function awe_WebCore_getCookies cdecl alias "awe_WebCore_getCookies" (byval webCore as any ptr, byval url as zstring ptr, byval excludeHTTPOnly as integer) as zstring ptr
declare sub awe_WebCore_deleteCookie cdecl alias "awe_WebCore_deleteCookie" (byval webCore as any ptr, byval url as zstring ptr, byval cookieName as zstring ptr)
